src/Test/Fixtures/Good/BitQubit/inferredQubitArrayDeclaration.lf
let qubits = qalloc(2);
