src/Test/Fixtures/Bad/TypeQualifier/linearAffineInferredQubits.lf
let linear affine qs = qalloc(2);
